Still struggling for a clean build of CsoundVST...

--- a/Makefile.am
+++ b/Makefile.am
@@ -1178,9 +1178,9 @@ frontends/CsoundVST/System.cpp
 if CONDITIONAL_IS_WIN32
 
 _CsoundVST_la_DEPENDENCIES=xmg libcsound.la
-_CsoundVST_la_CPPFLAGS=@LIBCSOUND_CPPFLAGS@ -I/usr/include/python2.3 -Ifrontends/CsoundVST
-_CsoundVST_la_CFLAGS=@LIBCSOUND_CFLAGS@
-_CsoundVST_la_CXXFLAGS=@LIBCSOUND_CXXFLAGS@
+_CsoundVST_la_CPPFLAGS=@LIBCSOUND_CPPFLAGS@ -D_MSC_VER -I/usr/include/python2.3 -Ifrontends/CsoundVST
+_CsoundVST_la_CFLAGS=@LIBCSOUND_CFLAGS@ -D_MSC_VER
+_CsoundVST_la_CXXFLAGS=@LIBCSOUND_CXXFLAGS@ -D_MSC_VER
 _CsoundVST_la_LIBADD=@LIBCSOUND_LIBADD@
 _CsoundVST_la_LDFLAGS=@LIBCSOUND_LDFLAGS@
 
