Closer to buildable

--- a/Makefile.am
+++ b/Makefile.am
@@ -289,7 +289,6 @@ H/foo.h \
 H/fout.h \
 H/ftgen.h \
 H/fwguide.h \
-H/ieee80.h \
 H/insert.h \
 H/lipfilt.h \
 H/lpc.h \
@@ -362,13 +361,9 @@ H/widgets.h \
 H/windin.h \
 H/winEPS.h \
 InOut/FL_graph.cpp \
-InOut/ieee80.c \
 InOut/libsnd.c \
+InOut/libsnd_u.c \
 InOut/rtpa.c \
-InOut/sfheader.c \
-InOut/soundin.c \
-InOut/soundio.c \
-InOut/ulaw.c \
 InOut/widgets.cpp \
 InOut/win98.c \
 InOut/winascii.c \
@@ -601,11 +596,8 @@ Engine/sort.c \
 Engine/sread.c \
 Engine/swrite.c \
 Engine/twarp.c \
-InOut/ieee80.c \
 InOut/libsnd.c \
-InOut/sfheader.c \
-InOut/soundin.c \
-InOut/soundio.c \
+InOut/libsnd_u.c \
 InOut/winascii.c \
 InOut/windin.c \
 InOut/window.c \
@@ -956,12 +948,7 @@ Engine/sread.c \
 Engine/swrite.c \
 Engine/twarp.c \
 InOut/FL_graph.cpp \
-InOut/ieee80.c \
-InOut/libsnd.c \
-InOut/sfheader.c \
-InOut/soundin.c \
-InOut/soundio.c \
-InOut/ulaw.c \
+InOut/libsnd_u.c \
 InOut/winascii.c \
 InOut/window.c \
 InOut/winEPS.c \
