--- a/util2/sndinfo/Makefile.in
+++ b/util2/sndinfo/Makefile.in
@@ -11,18 +11,17 @@ LIBS    = @WINLDFLAGS@ @X_LIBS@ @LIBS@
 T = ../..
 INC = ../../H
 
-OBJS =  main.@OBJEXT@ $T/sndinfo.@OBJEXT@ $T/filopen.@OBJEXT@ \
-	$T/sfheader.@OBJEXT@ $T/soundin.@OBJEXT@ \
-	$T/aiff.@OBJEXT@ $T/wave.@OBJEXT@ $T/ieee80.@OBJEXT@ \
-	$T/memalloc.@OBJEXT@ $T/aifc.@OBJEXT@ $T/getstring.@OBJEXT@
+OBJS =  sndinfo_main.@OBJEXT@ $T/sndinfo.@OBJEXT@ \
+	$T/sfheader.@OBJEXT@ $T/libsnd_u.@OBJEXT@ $T/natben.@OBJEXT@ \
+	$T/memalloc.@OBJEXT@ $T/memfiles.@OBJEXT@ $T/getstring.@OBJEXT@
 
 sndinfos:	sndinfo
 
 sndinfo:	$(OBJS)
 		@CC@ $(CFLAGS) -o sndinfo $(OBJS) -lm
 
-main.@OBJEXT@:		main.c $(INC)/ustub.h
-		@CC@ -I $(INC) $(CFLAGS) -c main.c
+sndinfo_main.@OBJEXT@:		sndinfo_main.c $(INC)/ustub.h
+		@CC@ -I $(INC) $(CFLAGS) -c sndinfo_main.c
 
 install: 	sndinfo
 		-strip sndinfo
